manifests/system/openobserve/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openobserve
  labels:
    app.kubernetes.io/managed-by: company-as-code
